--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hi Andrew Mediavilla!
+<!DOCTYPE html>
+<html>
+    <head>
+      <title>Andrew Mediavilla's CSCE 190 Site</title>
+    </head>
+     <body>
+        <h1>Andrew Mediavilla's CSCE 190 Site</h1>
+
+       <section class = "assignment">
+        <a href="files/ProblemStatement.pdf"><img src ="images/Problem_Statement.png"></a>
+        <section class = "ass-details">
+            <a href="files/ProblemStatement.pdf"><h2>Problem_Statement: Water Fountains</h2></a>
+            <p>Water fountains frequently do not work or only provide warm/hot water. Students who
+                need to refill their water bottles or get water after a long walk to class are mostly unaware of which water fountains work properly.
+                </p>
+        </section>
+        </section>
+ </body>
+</html>
