--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     </head>
      <body>
         <h1>Andrew Mediavilla's CSCE 190 Site</h1>
-
+<!-- Problem Statement Assignment-->
        <section class = "assignment">
         <a href="files/ProblemStatement.pdf"><img src ="images/Problem_Statement.png"></a>
         <section class = "ass-details">
-            <a href="files/ProblemStatement.pdf"><h2>Problem_Statement: Water Fountains</h2></a>
+            <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Water Fountains</h2></a>
             <p>Water fountains frequently do not work or only provide warm/hot water. Students who
                 need to refill their water bottles or get water after a long walk to class are mostly unaware of which water fountains work properly.
                 </p>
         </section>
         </section>
+        <!-- Affinity Diagram Assignment-->
+        <section class = "assignment">
+          <a href="files/CockJam.pdf"><img src ="images/AffinityBoard.png"></a>
+          <section class = "ass-details">
+              <a href="files/CockJam.pdf"><h2>Affinity Board: Water Fountains</h2></a>
+              <p> 
+                Brainstorming ideas for the most innovative, immersive and exciting water fountain experience to date.
+                  </p>
+          </section>
+          </section>
  </body>
 </html>
