--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="styles.css">
       <title>Andrew Mediavilla's CSCE 190 Site</title>
     </head>
      <body>
