--- a/index.html
+++ b/index.html
@@ -26,5 +26,31 @@
                   </p>
           </section>
           </section>
+  <!-- Personnas Assignment -->
+  <section class = "assignment">
+    <a href="files/Personnas.pdf"><img src ="images/Personna.png"></a>
+    <section class = "ass-details">
+        <a href="files/Personnas.pdf"><h2>Personna: 4 Personnas for Water Fountain Application</h2></a>
+        <p> 
+          Personnas from our target audience... Honest, Hardworking, Thirsty Individuals.
+            </p>
+    </section>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  </body>
 </html>
