--- a/index.html
+++ b/index.html
@@ -42,12 +42,23 @@
   <section class = "assignment">
     <a href="files/Storyboards.pdf "><img src ="images/StoryboardSnap.png"></a>
     <section class = "ass-details">
-        <a href="files/Personnas.pdf"><h2>Storyboards: Getting to Know The Users of Our Application</h2></a>
+        <a href="files/Storyboards.pdf"><h2>Storyboards: Getting to Know The Users of Our Application</h2></a>
         <p> 
           Stories from some of the dry-mouthed individuals whose lives we've changed!
             </p>
     </section>
     </section>
+
+    <!-- Sketches Assignment -->
+    <section class = "assignment">
+      <a href="files/sketches.pdf"><img src ="images/Sketches.png"></a>
+      <section class = "ass-details">
+          <a href="files/sketches.pdf"><h2>Sketches: A Rough Outline of Our Application</h2></a>
+          <p> 
+            Prototype sketches from the bright minds of "Hydro-Homie"!
+              </p>
+      </section>
+      </section>
 
 
 
