--- a/index.html
+++ b/index.html
@@ -6,61 +6,87 @@
     </head>
      <body>
         <h1>Andrew Mediavilla's CSCE 190 Site</h1>
-<!-- Problem Statement Assignment-->
-       <section class = "assignment">
-        <a href="files/ProblemStatement.pdf"><img src ="images/Problem_Statement.png"></a>
-        <section class = "ass-details">
-            <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Water Fountains</h2></a>
-            <p>Water fountains frequently do not work or only provide warm/hot water. Students who
-                need to refill their water bottles or get water after a long walk to class are mostly unaware of which water fountains work properly.
-                </p>
-        </section>
-        </section>
-        <!-- Affinity Diagram Assignment-->
+  
+        <div class="assignments">
+        <!-- Problem Statement Assignment-->
         <section class = "assignment">
-          <a href="files/CockJam.pdf"><img src ="images/AffinityBoard.png"></a>
-          <section class = "ass-details">
-              <a href="files/CockJam.pdf"><h2>Affinity Board: Water Fountains</h2></a>
-              <p> 
-                Brainstorming ideas for the most innovative, immersive and exciting water fountain experience to date.
+          <a href="files/ProblemStatement.pdf">
+              <h2>Problem Statement: Water Fountains</h2>
+            </a>
+           <a href="files/ProblemStatement.pdf">
+              <img src ="images/Problem_Statement.png">
+            </a>
+              <p>Water fountains frequently do not work or only provide warm/hot water. Students who
+                  need to refill their water bottles or get water after a long walk to class are mostly unaware of which water fountains work properly.
                   </p>
           </section>
-          </section>
-  <!-- Personnas Assignment -->
-  <section class = "assignment">
-    <a href="files/Personnas.pdf"><img src ="images/Personna.png"></a>
-    <section class = "ass-details">
-        <a href="files/Personnas.pdf"><h2>Personna: 4 Personnas for Water Fountain Application</h2></a>
-        <p> 
-          Personnas from our target audience... Honest, Hardworking, Thirsty Individuals.
-            </p>
-    </section>
-    </section>
 
+          <!-- Affinity Diagram Assignment-->
+          <section class = "assignment">
+                <a href="files/CockJam.pdf">
+                    <h2>Affinity Board: Water Fountains</h2>
+                  </a>
+            <a href="files/CockJam.pdf">
+                <img src ="images/AffinityBoard.png">
+              </a>
+                <p> 
+                  Brainstorming ideas for the most innovative, immersive and exciting water fountain experience to date.
+                    </p>
+            </section>
 
-    <!-- Storyboard Assignment -->
-  <section class = "assignment">
-    <a href="files/Storyboards.pdf "><img src ="images/StoryboardSnap.png"></a>
-    <section class = "ass-details">
-        <a href="files/Storyboards.pdf"><h2>Storyboards: Getting to Know The Users of Our Application</h2></a>
-        <p> 
-          Stories from some of the dry-mouthed individuals whose lives we've changed!
-            </p>
-    </section>
-    </section>
-
-    <!-- Sketches Assignment -->
+    <!-- Personnas Assignment -->
     <section class = "assignment">
-      <a href="files/sketches.pdf"><img src ="images/Sketches.png"></a>
-      <section class = "ass-details">
-          <a href="files/sketches.pdf"><h2>Sketches: A Rough Outline of Our Application</h2></a>
+      <a href="files/Personnas.pdf">
+          <h2>Personna: 4 Personnas for Water Fountain Application</h2>
+        </a>
+      <a href="files/Personnas.pdf">
+          <img src ="images/Personna.png">
+        </a>
           <p> 
-            Prototype sketches from the bright minds of "Hydro-Homie"!
+            Personnas from our target audience... Honest, Hardworking, Thirsty Individuals.
               </p>
       </section>
+
+      <!-- Storyboard Assignment -->
+    <section class = "assignment">
+      <a href="files/Storyboards.pdf">
+          <h2>Storyboards: Getting to Know The Users of Our Application</h2>
+        </a>
+      <a href="files/Storyboards.pdf ">
+          <img src ="images/StoryboardSnap.png">
+        </a>
+          <p> 
+            Stories from some of the dry-mouthed individuals whose lives we've changed!
+              </p>
       </section>
 
+      <!-- Sketches Assignment -->
+      <section class = "assignment">
+        <a href="files/sketches.pdf">
+            <h2>Sketches: A Rough Outline of Our Application</h2>
+          </a>
+        <a href="files/sketches.pdf">
+            <img src ="images/Sketches.png">
+          </a>
+            <p> 
+              Prototype sketches from the bright minds of "Hydro-Homie"!
+                </p>
+        </section>
 
+
+          <!-- Paper Prototype Assignment -->
+      <section class = "assignment">
+        <a href="https://www.youtube.com/watch?v=jZzr_1bz2_s">
+            <h2>Paper Prototype</h2>
+          </a>
+        <a href="https://www.youtube.com/watch?v=jZzr_1bz2_s">
+            <img src ="images/Video.png">
+          </a>
+            <p> 
+              A Paper Walkthrough of all potential "Hydro-Homie" screens!
+                </p>
+        </section>
+      </div>
 
 
 
