--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@
               A Paper Walkthrough of all potential "Hydro-Homie" screens!
                 </p>
         </section>
+
+ <!-- Hi-fi Prototype Assignment -->
+ <section class = "assignment">
+  <a href="https://pr.to/471IL9/?ap=1">
+      <h2>High Fidelity Prototype</h2>
+    </a>
+  <a href="https://pr.to/471IL9/?ap=1">
+      <img src ="images/Hifi.png">
+    </a>
+      <p> 
+        A High Fidelity Prototype of Hydro-Homie at its finest!
+          </p>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
       </div>
 
 
